# gplearn-CUDA

./: .gitignore  CONTRIBUTING.md  GEMINI.md  GPU_ACCELERATION_PLAN.md  LICENSE  README.rst  pyproject.toml
.github/workflows/: build.yml  publish.yml
doc/: advanced.rst  changelog.rst  conf.py  contributing.rst  cuda_architecture.rst  examples.rst  index.rst  installation.rst  intro.rst
examples/: benchmark.py  classifier_cuda.py  cuda_tutorial.py  regressor_cuda.py  transformer_cuda.py
gplearn/: __init__.py  _program.py  fitness.py  functions.py  genetic.py  utils.py
gplearn/tests/: test_cuda.py  test_improvements.py
